--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   src: url('/media/fonts/Vanilla.ttf');
 }
 
-
 body {
   font-family: helvetica;
 }
@@ -16,8 +15,38 @@ h1 {
   font-family: Vanilla;
 }
 
+.center {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.bubble-container {
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  padding: 15px;
+  text-align: left;
+}
+
+/* Structure */
+/* ========================*/
+#content-wrap {
+  max-width: 600px;
+  
+}
+
 /* Kitty */
 /* ========================*/
+.kitty-container {
+  background: #97D58C;
+  height: 200px;
+  width: 200px;
+  margin: 0 auto;
+}
 
-/* Footer */
+/* Tool Box
 /* ========================*/
+.tool-item {
+  width: 30%;
+  display: inline-block;
+}
