:ribbon: Proper font url

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* ========================*/
 @font-face {
   font-family: 'Vanilla';
-  src: url('/media/fonts/Vanilla.ttf');
+  src: url('media/fonts/Vanilla.ttf');
 }
 
 body {
